fixing sonarqube issues (#126)